# mnp-service

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  Dockerfile  LICENSE  Makefile  NOTICE  README.md  RELEASE_NOTES.md  add_license_header.py  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/agent/: generator.py  models.py  orchestrator.py
app/api/: dependencies.py  routes_agent.py  routes_asp.py  routes_audit.py  routes_dashboard.py  routes_evaluate.py  routes_event_calculus.py  routes_extract.py  routes_health.py  routes_metrics.py  routes_plugins.py  routes_rag.py  routes_review.py  routes_system.py  routes_tenants.py
app/asp/: engine.py  models.py
app/audit/: factory.py  masking.py  (+6 more)
docs/: ARCHITECTURE.md  DEMO_GUIDE.md  DEPLOYMENT.md  MIGRATIONS.md  OPERATIONS_RUNBOOK.md  RELEASE_CRITERIA.md  SECURITY_CHECKLIST.md  SYNTHETIC_TESTING.md
examples/: clinic_demo.py  seed_dashboard_data.py
migrations/: env.py
mnp_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
normative_tests/: cases.yaml
scripts/: divergence_report.py  export_openapi.py  smoke_test.py
tests/: test_agent_e2e.py  test_api_evaluate.py  test_asp_plugin.py  test_audit_metrics.py  test_audit_minimization.py  test_composition_hierarchical.py  test_cross_validation.py  test_dashboard.py  test_event_calculus.py  test_extraction.py  test_health.py  test_human_review.py  test_llm_extractor.py  test_normative_yaml.py  test_plugins.py  test_rag.py  test_release_hardening.py  test_synthetic_differential.py  test_tenant_registry.py
(+65 files in other folders)
