[project]
name = "mnp-service"
version = "1.2.0"
description = "Technical release of a Pluggable Normative Middleware for LLM applications"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "SQLAlchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
    "clingo>=5.7.1",
]
asp = [
    "clingo>=5.7.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"
